Reordenamiento de vista usando bootstrap.

--- a/templates/options/users-routes.html
+++ b/templates/options/users-routes.html
@@ -28,32 +28,34 @@
       <div id="main-chart-container" style="min-height:300px"></div>
     </li>
   </ul>
-  <ul class="FlexGrid">
-    <li class="FlexGrid-item">
-      <header class="Titles">
-        <h1 class="Titles-main">Top Landing Page</h3>
-        <p class="Titles-sub">Últimos 30 días</p>
-      </header>
-      <div id="landingpath-chart-container" style="min-height:300px"></div>
-    </li>
-    <li class="FlexGrid-item">
-      <header class="Titles">
-        <h1 class="Titles-main">Sesiones/Rebote</h3>
-        <p class="Titles-sub">Últimos 30 días</p>
-      </header>
-      <figure class="Chartjs-figure" id="temp-landingpath-chart-container" style="min-height:300px"></figure>
-      <ol class="Chartjs-legend" id="legend-6-container"></ol>
-    </li>
-  </ul>
-  <ul class="FlexGrid">
-    <li class="FlexGrid-item">
-      <header class="Titles">
-        <h1 class="Titles-main">Página de Inicio</h3>
-        <p class="Titles-sub">Últimos 30 días</p>
-      </header>
-      <figure class="Chartjs-figure" id="inicialpage-chart-container" style="min-height:300px"></figure>
-    </li>
-  </ul>
+  <div class="row">
+    <ul class="col-md-6 FlexGrid">
+      <li class="FlexGrid-item">
+        <header class="Titles">
+          <h1 class="Titles-main">Top Landing Page</h3>
+          <p class="Titles-sub">Últimos 30 días</p>
+        </header>
+        <div id="landingpath-chart-container" style="min-height:300px"></div>
+      </li>
+    </ul>
+    <ul class="col-md-6 FlexGrid">
+      <li class="FlexGrid-item">
+        <header class="Titles">
+          <h1 class="Titles-main">Sesiones/Rebote</h3>
+          <p class="Titles-sub">Últimos 30 días</p>
+        </header>
+        <figure class="Chartjs-figure" id="temp-landingpath-chart-container" style="min-height:300px"></figure>
+        <ol class="Chartjs-legend" id="legend-6-container"></ol>
+      </li>
+      <li class="col-md-6 FlexGrid-item">
+        <header class="Titles">
+          <h1 class="Titles-main">Página de Inicio</h3>
+          <p class="Titles-sub">Últimos 30 días</p>
+        </header>
+        <figure class="Chartjs-figure" id="inicialpage-chart-container" style="min-height:300px"></figure>
+      </li>
+    </ul>
+  </div>
 </div>
 
 <section>
