Agregado padding-top.

--- a/templates/options/users-routes.html
+++ b/templates/options/users-routes.html
@@ -28,7 +28,7 @@
       <div id="main-chart-container" style="min-height:300px"></div>
     </li>
   </ul>
-  <div class="row">
+  <div class="row" style="padding-top:30px;">
     <ul class="col-md-6 FlexGrid">
       <li class="FlexGrid-item">
         <header class="Titles">
