Ajusto de posición de barra de selección.

--- a/templates/options/users-routes.html
+++ b/templates/options/users-routes.html
@@ -5,7 +5,7 @@
 <section>
 </section>
 
-<div class="Dashboard Dashboard--full">
+<div class="Dashboard">
   <header class="Dashboard-header">
     <ul class="FlexGrid">
       <li class="FlexGrid-item">
