Cambios de estilos usando bootstrap.

--- a/templates/options/basic.html
+++ b/templates/options/basic.html
@@ -23,7 +23,6 @@
     <div id="date-range-selector-container" style="padding-top:20px;"></div>
   </header>
 
-
   <ul class="row FlexGrid FlexGrid--halves">
     <li class="col-md-6 FlexGrid-item">
       <div class="Chart">
@@ -45,7 +44,7 @@
     </li>
   </ul>
 
-  <ul class="FlexGrid FlexGrid--halves">
+  <ul class="row FlexGrid FlexGrid--halves">
     <li class="FlexGrid-item">
       <div class="Chart">
         <header class="Titles">
@@ -67,7 +66,7 @@
     </li>
   </ul>
 
-  <ul class="FlexGrid FlexGrid--halves">
+  <ul class="row FlexGrid FlexGrid--halves">
     <li class="FlexGrid-item">
       <div class="Chart">
         <header class="Titles">
