Integrado barra de selección de fecha de inicio y fin de consulta a google analytics.

--- a/templates/options/users-routes.html
+++ b/templates/options/users-routes.html
@@ -11,6 +11,9 @@
       <li class="FlexGrid-item">
         <div class="Titles">
           <h1 class="Titles-main" id="view-name">Selecciona una Vista</h1>
+          <div class="Titles-sub">Periodo de comparación:
+            <b id="period">31 days ago - Yesterday</b>
+          </div>
         </div>
       </li>
       <li class="FlexGrid-item FlexGrid-item--fixed">
@@ -18,6 +21,7 @@
       </li>
     </ul>
     <div class="ViewSelector" id="view-selector-container"></div>
+    <div id="date-range-selector-container" style="padding-top:20px;"></div>
   </header>
 
   <ul class="FlexGrid">
