--- a/templates/options/users-routes.html
+++ b/templates/options/users-routes.html
@@ -20,7 +20,7 @@
         <div id="active-users-container"></div>
       </li>
     </ul>
-    <div class="ViewSelector" id="view-selector-container"></div>
+    <div id="view-selector-container"></div>
     <div id="date-range-selector-container" style="padding-top:20px;"></div>
   </header>
 
