--- a/templates/options/demographics.html
+++ b/templates/options/demographics.html
@@ -17,7 +17,7 @@
         </div>
       </li>
     </ul>
-    <div class="ViewSelector" id="view-selector-container"></div>
+    <div id="view-selector-container"></div>
     <div id="date-range-selector-container" style="padding-top:20px;"></div>
   </header>
 
