--- a/templates/options/basic.html
+++ b/templates/options/basic.html
@@ -34,19 +34,10 @@
         <figure class="Chartjs-figure" id="country-container"></figure>
       </div>
     </li>
-    <li class="FlexGrid-item">
-      <div class="Chart">
-        <header class="Titles">
-          <h1 class="Titles-main">Usuarios/Nuevos Usuarios</h1>
-          <p class="Titles-sub">Últimos 30 días</p>
-        </header>
-        <figure class="Chartjs-figure" id="userNewUser-container"></figure>
-      </div>
-    </li>
   </ul>
 
-  <ul class="row FlexGrid FlexGrid--halves">
-    <li class="FlexGrid-item">
+  <ul class="row FlexGrid FlexGrid--halves" style="padding-top:30px;">
+    <li class="col-md-6 FlexGrid-item">
       <div class="Chart">
         <header class="Titles">
           <h1 class="Titles-main">Sesiones por Navegador</h1>
@@ -55,7 +46,7 @@
         <figure class="Chartjs-figure" id="sessions-browsers-chart-container"></figure>
       </div>
     </li>
-    <li class="FlexGrid-item">
+    <li class="col-md-6 FlexGrid-item">
       <div class="Chart">
         <header class="Titles">
           <h1 class="Titles-main">Sesiones por Dispositivo</h1>
@@ -63,6 +54,18 @@
         </header>
         <figure class="Chartjs-figure" id="device-chart-container"></figure>
         <ol class="Chartjs-legend" id="device-chart-container"></ol>
+      </div>
+    </li>
+  </ul>
+
+  <ul class="row FlexGrid FlexGrid--halves">
+    <li class="FlexGrid-item">
+      <div class="Chart">
+        <header class="Titles">
+          <h1 class="Titles-main">Usuarios/Nuevos Usuarios</h1>
+          <p class="Titles-sub">Últimos 30 días</p>
+        </header>
+        <figure class="col-md-offset-3 Chartjs-figure" id="userNewUser-container"></figure>
       </div>
     </li>
   </ul>
