Agregado nueva vista.

--- a/templates/options/channels-keywords.html
+++ b/templates/options/channels-keywords.html
@@ -14,6 +14,6 @@
 {% include 'options/dependencies/_comparisons-over-time.html' %}
 {{ super() }}
 <script>
-{% include 'options/code/_channels.js' %}
+{% include 'options/code/_channels-keywords.js' %}
 </script>
 {% endblock %}
