--- a/templates/options/channels-keywords.html
+++ b/templates/options/channels-keywords.html
@@ -5,6 +5,39 @@
 <section>
 </section>
 
+<div class="Dashboard">
+  <header class="Dashboard-header">
+    <ul class="FlexGrid">
+      <li class="FlexGrid-item">
+        <div class="Titles">
+          <h1 class="Titles-main" id="view-name">Selecciona una Vista</h1>
+          <div class="Titles-sub">Periodo de comparación:
+            <b id="period">31 days ago - Yesterday</b>
+          </div>
+        </div>
+      </li>
+      <li class="FlexGrid-item FlexGrid-item--fixed">
+        <div id="active-users-container"></div>
+      </li>
+    </ul>
+    <div id="view-selector-container"></div>
+    <div id="date-range-selector-container" style="padding-top:20px;"></div>
+  </header>
+
+  <ul class="row FlexGrid FlexGrid--halves">
+    <li class="col-md-6 FlexGrid-item">
+      <div class="Chart">
+        <header class="Titles">
+          <h1 class="Titles-main">Sesiones por País</h1>
+          <p class="Titles-sub">Top 21</p>
+        </header>
+        <figure class="Chartjs-figure" id="country-container"></figure>
+      </div>
+    </li>
+  </ul>
+
+</div>
+
 <section>
 </section>
 
