Agregado tabla de landingPagePath unido a los eventos del sesiones por país.

--- a/templates/options/channels-keywords.html
+++ b/templates/options/channels-keywords.html
@@ -35,6 +35,17 @@
       </div>
     </li>
   </ul>
+  <div class="row" style="padding-top:30px;">
+    <ul class="col-md-6 FlexGrid">
+      <li class="FlexGrid-item">
+        <header class="Titles">
+          <h1 class="Titles-main">Top Landing Page</h3>
+          <p class="Titles-sub">Últimos 30 días</p>
+        </header>
+        <div id="landingpath-chart-container" style="min-height:300px"></div>
+      </li>
+    </ul>
+  </div>
 
 </div>
 
