Creado nuevo cuadro para representar a los canales.

--- a/templates/options/channels-keywords.html
+++ b/templates/options/channels-keywords.html
@@ -39,10 +39,19 @@
     <ul class="col-md-6 FlexGrid">
       <li class="FlexGrid-item">
         <header class="Titles">
-          <h1 class="Titles-main">Top Landing Page</h3>
+          <h1 class="Titles-main">Top Landing Page</h1>
           <p class="Titles-sub" id="landing-subtitle"></p>
         </header>
         <div id="landingpath-chart-container" style="min-height:300px"></div>
+      </li>
+    </ul>
+    <ul class="col-md-6 FlexGrid">
+      <li class="FlexGrid-item">
+        <header class="Titles">
+          <h1 class="Titles-main">Canales</h1>
+          <p class="Titles-sub" id="channel-subtitle"></p>
+        </header>
+        <figure class="Chartjs-figure" id="channel-chart-container" style="min-height:300px"></figure>
       </li>
     </ul>
   </div>
