--- a/templates/options/channels-keywords.html
+++ b/templates/options/channels-keywords.html
@@ -53,6 +53,13 @@
         </header>
         <figure class="Chartjs-figure" id="channel-chart-container" style="min-height:300px"></figure>
       </li>
+      <li class="FlexGrid-item">
+        <header class="Titles">
+          <h1 class="Titles-main">Palabras Clave</h1>
+          <p class="Titles-sub" id="keyword-subtitle"></p>
+        </header>
+        <figure class="Chartjs-figure" id="keyword-chart-container" style="min-height:300px"></figure>
+      </li>
     </ul>
   </div>
 
