Creado nuevo elemento DemographicsSelector.

--- a/templates/options/channels-keywords.html
+++ b/templates/options/channels-keywords.html
@@ -22,6 +22,7 @@
     </ul>
     <div id="view-selector-container"></div>
     <div id="date-range-selector-container" style="padding-top:20px;"></div>
+    <div id="demographics-selector-container" style="padding-top:20px;"></div>
   </header>
 
   <ul class="row FlexGrid FlexGrid--halves">
