--- a/templates/options/dependencies/_comparisons-over-time.html
+++ b/templates/options/dependencies/_comparisons-over-time.html
@@ -9,6 +9,9 @@
 <!-- Include the DateRangeSelector component script. -->
 <script src="/public/javascript/options/components/date-range-selector.js"></script>
 
+<!-- Include the DateRangeSelector component script. -->
+<script src="/public/javascript/options/components/demographics-selector.js"></script>
+
 <!-- Include the ActiveUsers component script. -->
 <script src="/public/javascript/options/components/active-users.js"></script>
 
