Reordenamiento de vista.

--- a/templates/options/channels-keywords.html
+++ b/templates/options/channels-keywords.html
@@ -35,17 +35,17 @@
       </div>
     </li>
   </ul>
-  <ul class="row FlexGrid">
-    <li class="col-md-12 FlexGrid-item">
-      <header class="Titles">
-        <h1 class="Titles-main">Top Landing Page</h1>
-        <p class="Titles-sub" id="landing-subtitle"></p>
-      </header>
-      <div id="landingpath-chart-container" style="min-height:300px"></div>
-    </li>
-  </ul>
   <div class="row" style="padding-top:30px;">
-    <ul class="FlexGrid">
+    <ul class="col-md-6 FlexGrid">
+      <li class="col-md-12 FlexGrid-item">
+        <header class="Titles">
+          <h1 class="Titles-main">Top Landing Page</h1>
+          <p class="Titles-sub" id="landing-subtitle"></p>
+        </header>
+        <div id="landingpath-chart-container" style="min-height:300px"></div>
+      </li>
+    </ul>
+    <ul class="col-md-6 FlexGrid">
       <li class="FlexGrid-item">
         <header class="Titles">
           <h1 class="Titles-main">Canales</h1>
