--- a/templates/options/users-routes.html
+++ b/templates/options/users-routes.html
@@ -27,7 +27,7 @@
   <ul class="FlexGrid">
     <li class="FlexGrid-item">
       <header class="Titles">
-        <h1 class="Titles-main">Usuarios por País (últimos 30 días)</h3>
+        <h1 class="Titles-main">Sesiones por País (últimos 30 días)</h3>
       </header>
       <div id="main-chart-container" style="min-height:300px"></div>
     </li>
