Cambio de nombre de gráficos main por country.

--- a/templates/options/users-routes.html
+++ b/templates/options/users-routes.html
@@ -29,7 +29,7 @@
       <header class="Titles">
         <h1 class="Titles-main">Sesiones por País (últimos 30 días)</h3>
       </header>
-      <div id="main-chart-container" style="min-height:300px"></div>
+      <div id="country-chart-container" style="min-height:300px"></div>
     </li>
   </ul>
   <div class="row" style="padding-top:30px;">
