--- a/templates/options/referrals.html
+++ b/templates/options/referrals.html
@@ -35,7 +35,7 @@
     <ul class="col-md-6 FlexGrid">
       <li class="FlexGrid-item">
         <header class="Titles">
-          <h1 class="Titles-main">Top Landing Page</h3>
+          <h1 class="Titles-main">Top Referidos</h3>
           <p class="Titles-sub">Últimos 30 días</p>
         </header>
         <div id="referral-chart-container" style="min-height:300px"></div>
@@ -44,7 +44,7 @@
     <ul class="col-md-6 FlexGrid">
       <li class="FlexGrid-item">
         <header class="Titles">
-          <h1 class="Titles-main">Sesiones/Rebote</h3>
+          <h1 class="Titles-main">Rebote</h3>
           <p class="Titles-sub">Últimos 30 días</p>
         </header>
         <figure class="Chartjs-figure" id="temp-bouncerate-chart-container" style="min-height:300px"></figure>
