--- a/templates/options/referrals.html
+++ b/templates/options/referrals.html
@@ -26,7 +26,7 @@
     <ul class="FlexGrid">
     <li class="FlexGrid-item">
       <header class="Titles">
-        <h1 class="Titles-main">Sesiones por País (últimos 30 días)</h3>
+        <h1 class="Titles-main">Sesiones por País</h3>
       </header>
       <div id="country-chart-container" style="min-height:300px"></div>
     </li>
@@ -36,7 +36,7 @@
       <li class="FlexGrid-item">
         <header class="Titles">
           <h1 class="Titles-main">Top Referidos</h3>
-          <p class="Titles-sub">Últimos 30 días</p>
+          <p class="Titles-sub"></p>
         </header>
         <div id="referral-chart-container" style="min-height:300px"></div>
       </li>
@@ -45,7 +45,7 @@
       <li class="FlexGrid-item">
         <header class="Titles">
           <h1 class="Titles-main">Tasa de Rebote</h3>
-          <p class="Titles-sub">Últimos 30 días</p>
+          <p class="Titles-sub"></p>
         </header>
         <figure class="Chartjs-figure" id="temp-bouncerate-chart-container" style="min-height:300px"></figure>
         <ol class="Chartjs-legend" id="legend-6-container"></ol>
