--- a/templates/acquisition/landing-pages.html
+++ b/templates/acquisition/landing-pages.html
@@ -23,19 +23,19 @@
     <div id="view-selector-container"></div>
     <div id="date-range-selector-container" style="padding-top:20px;"></div>
   </header>
-    <ul class="FlexGrid">
+  <ul class="FlexGrid">
     <li class="FlexGrid-item">
       <header class="Titles">
-        <h1 class="Titles-main">Sesiones por País</h3>
+        <h1 class="Titles-main">Sesiones por País</h1>
       </header>
-      <div id="country-chart-container" style="min-height:300px"></div>
+      <figure class="Chartjs-figure" id="country-chart-container"></figure>
     </li>
   </ul>
   <div class="row" style="padding-top:30px;">
     <ul class="col-md-6 FlexGrid">
       <li class="FlexGrid-item">
         <header class="Titles">
-          <h1 class="Titles-main">Top Landing Page</h3>
+          <h1 class="Titles-main">Top Landing Page</h1>
           <p class="Titles-sub"></p>
         </header>
         <div id="landingpath-chart-container" style="min-height:300px"></div>
@@ -44,11 +44,10 @@
     <ul class="col-md-6 FlexGrid">
       <li class="FlexGrid-item">
         <header class="Titles">
-          <h1 class="Titles-main">Tasa de Rebote</h3>
+          <h1 class="Titles-main">Tasa de Rebote</h1>
           <p class="Titles-sub"></p>
         </header>
         <figure class="Chartjs-figure" id="temp-landingpath-chart-container" style="min-height:300px"></figure>
-        <ol class="Chartjs-legend" id="legend-6-container"></ol>
       </li>
     </ul>
   </div>
