Ampliado límite a 20 en Table.

--- a/templates/options/basic.html
+++ b/templates/options/basic.html
@@ -29,7 +29,7 @@
       <div class="Chart">
         <header class="Titles">
           <h1 class="Titles-main">Sesiones por País</h1>
-          <p class="Titles-sub">Últimos 30 días</p>
+          <p class="Titles-sub"></p>
         </header>
         <figure class="Chartjs-figure" id="country-container"></figure>
       </div>
@@ -41,7 +41,7 @@
       <div class="Chart">
         <header class="Titles">
           <h1 class="Titles-main">Sesiones por Navegador</h1>
-          <p class="Titles-sub">Últimos 30 días</p>
+          <p class="Titles-sub"></p>
         </header>
         <figure class="Chartjs-figure" id="sessions-browsers-chart-container"></figure>
       </div>
