Integración de segundos cuadros paralelos.

--- a/templates/options/users-routes.html
+++ b/templates/options/users-routes.html
@@ -30,14 +30,29 @@
         <header class="Titles">
           <h1 class="Titles-main">Sesiones por País (últimos 30 días)</h3>
         </header>
-        <div id="country-chart-container" style="min-height:300px"></div>
+        <div id="country-container-1" style="min-height:300px"></div>
       </li>
       <li class="FlexGrid-item">
         <header class="Titles">
           <h1 class="Titles-main">Top Landing Page</h3>
           <p class="Titles-sub">Últimos 30 días</p>
         </header>
-        <div id="landingpath-chart-container" style="min-height:300px"></div>
+        <div id="landingpath-container-1" style="min-height:300px"></div>
+      </li>
+    </ul>
+    <ul class="col-md-6 FlexGrid">
+      <li class="FlexGrid-item">
+        <header class="Titles">
+          <h1 class="Titles-main">Sesiones por País (últimos 30 días)</h3>
+        </header>
+        <div id="country-container-2" style="min-height:300px"></div>
+      </li>
+      <li class="FlexGrid-item">
+        <header class="Titles">
+          <h1 class="Titles-main">Top Landing Page</h3>
+          <p class="Titles-sub">Últimos 30 días</p>
+        </header>
+        <div id="landingpath-container-2" style="min-height:300px"></div>
       </li>
     </ul>
   </div>
