Cambio dinámico de subtítulos.

--- a/templates/options/users-routes.html
+++ b/templates/options/users-routes.html
@@ -28,14 +28,15 @@
     <ul class="col-md-6 FlexGrid">
       <li class="FlexGrid-item">
         <header class="Titles">
-          <h1 class="Titles-main">Sesiones por País (últimos 30 días)</h3>
+          <h1 class="Titles-main">Sesiones por País</h3>
+          <p class="Titles-sub">Top 21</p>
         </header>
         <div id="country-container-1" style="min-height:300px"></div>
       </li>
       <li class="FlexGrid-item">
         <header class="Titles">
-          <h1 class="Titles-main">Top Landing Page</h3>
-          <p class="Titles-sub">Últimos 30 días</p>
+          <h1 class="Titles-main">Top Landing Page</h1>
+          <p class="Titles-sub" id="subtitle-1"></p>
         </header>
         <div id="landingpath-container-1" style="min-height:300px"></div>
       </li>
@@ -43,14 +44,15 @@
     <ul class="col-md-6 FlexGrid">
       <li class="FlexGrid-item">
         <header class="Titles">
-          <h1 class="Titles-main">Sesiones por País (últimos 30 días)</h3>
+          <h1 class="Titles-main">Sesiones por País</h1>
+          <p class="Titles-sub">Top 21</p>
         </header>
         <div id="country-container-2" style="min-height:300px"></div>
       </li>
       <li class="FlexGrid-item">
         <header class="Titles">
           <h1 class="Titles-main">Top Landing Page</h3>
-          <p class="Titles-sub">Últimos 30 días</p>
+          <p class="Titles-sub" id="subtitle-2"></p>
         </header>
         <div id="landingpath-container-2" style="min-height:300px"></div>
       </li>
