--- a/templates/acquisition/landing-pages.html
+++ b/templates/acquisition/landing-pages.html
@@ -21,18 +21,19 @@
       </li>
     </ul>
     <div id="view-selector-container"></div>
-    <div id="date-range-selector-container" style="padding-top:20px;"></div>
   </header>
-  <ul class="FlexGrid">
-    <li class="FlexGrid-item">
-      <header class="Titles">
-        <h1 class="Titles-main">Sesiones por País</h1>
-      </header>
-      <figure class="Chartjs-figure" id="country-chart-container"></figure>
-    </li>
-  </ul>
-  <div class="row" style="padding-top:30px;">
+
+  <div class="row">
     <ul class="col-md-6 FlexGrid">
+      <li class="FlexGrid-item">
+        <div id="date-range-selector-container" style="padding-top:20px;"></div>
+      </li>
+      <li class="FlexGrid-item">
+        <header class="Titles">
+          <h1 class="Titles-main">Sesiones por País</h1>
+        </header>
+        <figure class="Chartjs-figure" id="country-chart-container"></figure>
+      </li>
       <li class="FlexGrid-item">
         <header class="Titles">
           <h1 class="Titles-main">Top Landing Page</h1>
@@ -40,8 +41,6 @@
         </header>
         <div id="landingpath-chart-container" style="min-height:300px"></div>
       </li>
-    </ul>
-    <ul class="col-md-6 FlexGrid">
       <li class="FlexGrid-item">
         <header class="Titles">
           <h1 class="Titles-main">Tasa de Rebote</h1>
@@ -49,6 +48,9 @@
         </header>
         <figure class="Chartjs-figure" id="temp-landingpath-chart-container" style="min-height:300px"></figure>
       </li>
+    </ul>
+
+    <ul class="col-md-6 FlexGrid">
     </ul>
   </div>
 </div>
