Cambo de ids de figuras.

--- a/templates/acquisition/landing-pages.html
+++ b/templates/acquisition/landing-pages.html
@@ -32,14 +32,14 @@
         <header class="Titles">
           <h1 class="Titles-main">Sesiones por País</h1>
         </header>
-        <figure class="Chartjs-figure" id="country-chart-container"></figure>
+        <figure class="Chartjs-figure" id="country-container"></figure>
       </li>
       <li class="FlexGrid-item">
         <header class="Titles">
           <h1 class="Titles-main">Top Landing Page</h1>
           <p class="Titles-sub"></p>
         </header>
-        <div id="landingpath-chart-container" style="min-height:300px"></div>
+        <div id="landingpath-container" style="min-height:300px"></div>
       </li>
     </ul>
 
