Eliminicación de padding-top.

--- a/templates/acquisition/landing-pages.html
+++ b/templates/acquisition/landing-pages.html
@@ -26,7 +26,7 @@
   <div class="row">
     <ul class="col-md-6 FlexGrid">
       <li class="FlexGrid-item">
-        <div id="date-range-selector-container" style="padding-top:20px;"></div>
+        <div id="date-range-selector-container"></div>
       </li>
       <li class="FlexGrid-item">
         <header class="Titles">
