Creado cuadro paralelos en vista.

--- a/templates/acquisition/landing-pages.html
+++ b/templates/acquisition/landing-pages.html
@@ -26,24 +26,40 @@
   <div class="row">
     <ul class="col-md-6 FlexGrid">
       <li class="FlexGrid-item">
-        <div id="date-range-selector-container"></div>
+        <div id="date-range-selector-container-1"></div>
       </li>
       <li class="FlexGrid-item">
         <header class="Titles">
           <h1 class="Titles-main">Sesiones por País</h1>
         </header>
-        <figure class="Chartjs-figure" id="country-container"></figure>
+        <figure class="Chartjs-figure" id="country-container-1"></figure>
       </li>
       <li class="FlexGrid-item">
         <header class="Titles">
           <h1 class="Titles-main">Top Landing Page</h1>
           <p class="Titles-sub"></p>
         </header>
-        <div id="landingpath-container" style="min-height:300px"></div>
+        <div id="landingpath-container-1" style="min-height:300px"></div>
       </li>
     </ul>
 
     <ul class="col-md-6 FlexGrid">
+      <li class="FlexGrid-item">
+        <div id="date-range-selector-container-2"></div>
+      </li>
+      <li class="FlexGrid-item">
+        <header class="Titles">
+          <h1 class="Titles-main">Sesiones por País</h1>
+        </header>
+        <figure class="Chartjs-figure" id="country-container-2"></figure>
+      </li>
+      <li class="FlexGrid-item">
+        <header class="Titles">
+          <h1 class="Titles-main">Top Landing Page</h1>
+          <p class="Titles-sub"></p>
+        </header>
+        <div id="landingpath-container-2" style="min-height:300px"></div>
+      </li>
     </ul>
   </div>
 </div>
