--- a/templates/acquisition/landing-pages.html
+++ b/templates/acquisition/landing-pages.html
@@ -34,7 +34,7 @@
       <li class="FlexGrid-item">
         <header class="Titles">
           <h1 class="Titles-main">Top Landing Page</h1>
-          <p class="Titles-sub"></p>
+          <p class="Titles-sub" id="subtitle-1"></p>
         </header>
         <div id="landingpath-container-1" style="min-height:300px"></div>
       </li>
@@ -53,7 +53,7 @@
       <li class="FlexGrid-item">
         <header class="Titles">
           <h1 class="Titles-main">Top Landing Page</h1>
-          <p class="Titles-sub"></p>
+          <p class="Titles-sub" id="subtitle-2"></p>
         </header>
         <div id="landingpath-container-2" style="min-height:300px"></div>
       </li>
