Se ha divido la vista en dos partes paralelas.

--- a/templates/acquisition/referrals.html
+++ b/templates/acquisition/referrals.html
@@ -21,25 +21,28 @@
       </li>
     </ul>
     <div id="view-selector-container"></div>
-    <div id="date-range-selector-container" style="padding-top:20px;"></div>
   </header>
-    <ul class="FlexGrid">
-    <li class="FlexGrid-item">
-      <header class="Titles">
-        <h1 class="Titles-main">Sesiones por País</h3>
-      </header>
-      <div id="country-chart-container" style="min-height:300px"></div>
-    </li>
-  </ul>
-  <div class="row" style="padding-top:30px;">
+
+  <div class="row">
     <ul class="col-md-6 FlexGrid">
-      <li class="FlexGrid-item">
+      <li class="col-md-12 FlexGrid-item">
+        <div id="date-range-selector-container"></div>
+      </li>
+      <li class="col-md-12 FlexGrid-item">
+        <header class="Titles">
+          <h1 class="Titles-main">Sesiones por País</h3>
+        </header>
+        <div id="country-chart-container" style="min-height:300px"></div>
+      </li>
+      <li class="col-md-12 FlexGrid-item">
         <header class="Titles">
           <h1 class="Titles-main">Top Referidos</h3>
           <p class="Titles-sub"></p>
         </header>
         <div id="referral-chart-container" style="min-height:300px"></div>
       </li>
+    </ul>
+    <ul class="col-md-6 FlexGrid">
     </ul>
   </div>
 </div>
