--- a/templates/acquisition/referrals.html
+++ b/templates/acquisition/referrals.html
@@ -26,38 +26,38 @@
   <div class="row">
     <ul class="col-md-6 FlexGrid">
       <li class="col-md-12 FlexGrid-item">
-        <div id="date-range-selector-container-1"></div>
+        <div id="dateRangeSelector-container-1"></div>
       </li>
       <li class="col-md-12 FlexGrid-item">
         <header class="Titles">
           <h1 class="Titles-main">Sesiones por País</h3>
         </header>
-        <div id="country-chart-container-1" style="min-height:300px"></div>
+        <div id="country-container-1" style="min-height:300px"></div>
       </li>
       <li class="col-md-12 FlexGrid-item">
         <header class="Titles">
           <h1 class="Titles-main">Top Referidos</h3>
           <p class="Titles-sub"></p>
         </header>
-        <div id="referral-chart-container-1" style="min-height:300px"></div>
+        <div id="referral-container-1" style="min-height:300px"></div>
       </li>
     </ul>
     <ul class="col-md-6 FlexGrid">
       <li class="col-md-12 FlexGrid-item">
-        <div id="date-range-selector-container-2"></div>
+        <div id="dateRangeSelector-container-2"></div>
       </li>
       <li class="col-md-12 FlexGrid-item">
         <header class="Titles">
           <h1 class="Titles-main">Sesiones por País</h3>
         </header>
-        <div id="country-chart-container-2" style="min-height:300px"></div>
+        <div id="country-container-2" style="min-height:300px"></div>
       </li>
       <li class="col-md-12 FlexGrid-item">
         <header class="Titles">
           <h1 class="Titles-main">Top Referidos</h3>
           <p class="Titles-sub"></p>
         </header>
-        <div id="referral-chart-container-2" style="min-height:300px"></div>
+        <div id="referral-container-2" style="min-height:300px"></div>
       </li>
     </ul>
   </div>
