--- a/templates/acquisition/referrals.html
+++ b/templates/acquisition/referrals.html
@@ -34,7 +34,7 @@
       <li class="col-md-12 FlexGrid-item">
         <header class="Titles">
           <h1 class="Titles-main">Top Referidos</h3>
-          <p class="Titles-sub"></p>
+          <p class="Titles-sub" id="subtitle-1"></p>
         </header>
         <div id="referral-container-1" style="min-height:300px"></div>
       </li>
@@ -52,7 +52,7 @@
       <li class="col-md-12 FlexGrid-item">
         <header class="Titles">
           <h1 class="Titles-main">Top Referidos</h3>
-          <p class="Titles-sub"></p>
+          <p class="Titles-sub" id="subtitle-2"></p>
         </header>
         <div id="referral-container-2" style="min-height:300px"></div>
       </li>
