--- a/templates/acquisition/landing-pages.html
+++ b/templates/acquisition/landing-pages.html
@@ -20,7 +20,11 @@
     <div id="view-selector-container"></div>
   </header>
 
-  <div class="row">
+  <div class="row Titles">
+    <h1 class="Titles-main">Sesiones registradas a través del Canal: Direct</h1>
+  </div>
+
+  <div class="row" style="padding-top:30px" >
     <ul class="col-md-6 FlexGrid">
       <li class="FlexGrid-item">
         <div id="dateRangeSelector-container-1"></div>
