--- a/templates/acquisition/social-networks.html
+++ b/templates/acquisition/social-networks.html
@@ -33,10 +33,10 @@
       </li>
       <li class="col-md-12 FlexGrid-item">
         <header class="Titles">
-          <h1 class="Titles-main">Top Referidos</h3>
+          <h1 class="Titles-main">Top Redes Sociales</h3>
           <p class="Titles-sub" id="subtitle-1"></p>
         </header>
-        <div id="referral-container-1" style="min-height:300px"></div>
+        <div id="network-container-1" style="min-height:300px"></div>
       </li>
     </ul>
     <ul class="col-md-6 FlexGrid">
@@ -51,10 +51,10 @@
       </li>
       <li class="col-md-12 FlexGrid-item">
         <header class="Titles">
-          <h1 class="Titles-main">Top Referidos</h3>
+          <h1 class="Titles-main">Top Redes Sociales</h3>
           <p class="Titles-sub" id="subtitle-2"></p>
         </header>
-        <div id="referral-container-2" style="min-height:300px"></div>
+        <div id="network-container-2" style="min-height:300px"></div>
       </li>
     </ul>
   </div>
@@ -69,6 +69,6 @@
 {% include 'options/dependencies/_comparisons-over-time.html' %}
 {{ super() }}
 <script>
-{% include 'acquisition/code/_keywords.js' %}
+{% include 'acquisition/code/_social-networks.js' %}
 </script>
 {% endblock %}
