--- a/templates/acquisition/keywords.html
+++ b/templates/acquisition/keywords.html
@@ -27,16 +27,16 @@
       </li>
       <li class="col-md-12 FlexGrid-item">
         <header class="Titles">
-          <h1 class="Titles-main">Sesiones por País</h3>
+          <h1 class="Titles-main">Sesiones por País</h1>
         </header>
         <div id="country-container-1" style="min-height:300px"></div>
       </li>
       <li class="col-md-12 FlexGrid-item">
         <header class="Titles">
-          <h1 class="Titles-main">Top Referidos</h3>
+          <h1 class="Titles-main">Top Palabras Claves</h1>
           <p class="Titles-sub" id="subtitle-1"></p>
         </header>
-        <div id="referral-container-1" style="min-height:300px"></div>
+        <div id="keywords-container-1" style="min-height:300px"></div>
       </li>
     </ul>
     <ul class="col-md-6 FlexGrid">
@@ -45,16 +45,16 @@
       </li>
       <li class="col-md-12 FlexGrid-item">
         <header class="Titles">
-          <h1 class="Titles-main">Sesiones por País</h3>
+          <h1 class="Titles-main">Sesiones por País</h1>
         </header>
         <div id="country-container-2" style="min-height:300px"></div>
       </li>
       <li class="col-md-12 FlexGrid-item">
         <header class="Titles">
-          <h1 class="Titles-main">Top Referidos</h3>
+          <h1 class="Titles-main">Top Palabras Claves</h1>
           <p class="Titles-sub" id="subtitle-2"></p>
         </header>
-        <div id="referral-container-2" style="min-height:300px"></div>
+        <div id="keywords-container-2" style="min-height:300px"></div>
       </li>
     </ul>
   </div>
