Cmabio de nombre y métricas.

--- a/templates/options/navigation-summary.html
+++ b/templates/options/navigation-summary.html
@@ -24,23 +24,23 @@
   <ul class="FlexGrid">
     <li class="FlexGrid-item">
       <header class="Titles">
-        <h1 class="Titles-main"style="padding-bottom:10px;">Usuarios por País: <b id="period2">31 day ago - Yesterday</b></h1>
+        <h1 class="Titles-main"style="padding-bottom:10px;">Páginas: <b id="period2">31 day ago - Yesterday</b></h1>
       </header>
-      <div id="main-chart-container" style="min-height:300px"></div>
+      <div id="page-container" style="min-height:300px"></div>
     </li>
   </ul>
   <ul class="FlexGrid" style="padding-top:30px">
     <li class="FlexGrid-item">
       <header class="Titles">
-        <h1 class="Titles-main">Dispositivos</h1>
+        <h1 class="Titles-main">Página Previa</h1>
       </header>
-      <div id="devices-chart-container" style="min-height:300px"></div>
+      <div id="previous-container" style="min-height:300px"></div>
     </li>
     <li class="FlexGrid-item">
       <header class="Titles">
-        <h1 class="Titles-main">Género</h1>
+        <h1 class="Titles-main">Página Siguiente</h1>
       </header>
-      <div id="gender-chart-container" style="min-height:300px"></div>
+      <div id="next-container" style="min-height:300px"></div>
     </li>
   </ul>
 </div>
