--- a/templates/options/navigation-summary.html
+++ b/templates/options/navigation-summary.html
@@ -21,7 +21,7 @@
     <div id="date-range-selector-container" style="padding-top:20px;"></div>
   </header>
 
-  <ul class="FlexGrid">
+  <ul class="row FlexGrid">
     <li class="FlexGrid-item">
       <header class="Titles">
         <h1 class="Titles-main"style="padding-bottom:10px;">Páginas: <b id="period2">31 day ago - Yesterday</b></h1>
@@ -29,14 +29,14 @@
       <div id="page-container" style="min-height:300px"></div>
     </li>
   </ul>
-  <ul class="FlexGrid" style="padding-top:30px">
-    <li class="FlexGrid-item">
+  <ul class="row FlexGrid" style="padding-top:30px">
+    <li class="col-md-6 FlexGrid-item">
       <header class="Titles">
         <h1 class="Titles-main">Página Previa</h1>
       </header>
       <div id="previous-container" style="min-height:300px"></div>
     </li>
-    <li class="FlexGrid-item">
+    <li class="col-md-6 FlexGrid-item">
       <header class="Titles">
         <h1 class="Titles-main">Página Siguiente</h1>
       </header>
