Aparición dinámica de tablas secundaria, activa por filtro.

--- a/templates/options/navigation-summary.html
+++ b/templates/options/navigation-summary.html
@@ -24,21 +24,23 @@
   <ul class="row FlexGrid">
     <li class="FlexGrid-item">
       <header class="Titles">
-        <h1 class="Titles-main"style="padding-bottom:10px;">Páginas: <b id="period2">31 day ago - Yesterday</b></h1>
+        <h1 class="Titles-main"style="padding-bottom:10px;">Páginas</h1>
       </header>
       <div id="page-container" style="min-height:300px"></div>
     </li>
   </ul>
-  <ul class="row FlexGrid" style="padding-top:30px">
+  <ul class="row FlexGrid" style="padding-top:30px; display:none;" id="prev-next-ul">
     <li class="col-md-6 FlexGrid-item">
       <header class="Titles">
         <h1 class="Titles-main">Página Previa</h1>
+        <p class="Titles-sub" id="previous"></p>
       </header>
       <div id="previous-container" style="min-height:300px"></div>
     </li>
     <li class="col-md-6 FlexGrid-item">
       <header class="Titles">
         <h1 class="Titles-main">Página Siguiente</h1>
+        <p class="Titles-sub" id="next"></p>
       </header>
       <div id="next-container" style="min-height:300px"></div>
     </li>
