--- a/templates/_logo.html
+++ b/templates/_logo.html
@@ -1,18 +1,12 @@
 <div class="Logo" title="Google Analytics">
   <div class="Logo-full">
-    <a href="http://www.peruhop.com">
+    <!--a href="http://www.peruhop.com">
       <img border="0" src="https://3bbdb23jem2j4esrdm1gcdbd-wpengine.netdna-ssl.com/wp-content/uploads/dynamik-gen/theme/images/peru-hop-header-red.jpg" width="100" height="100">
-    </a>
-    <!--svg viewBox="0 0 303 26">
-      <use xlink:href="/public/images/icons.svg#ga-developer-logo"></use>
-    </svg-->
+    </a-->
   </div>
   <div class="Logo-partial">
-    <a href="http://www.peruhop.com">
+    <!--a href="http://www.peruhop.com">
       <img border="0" src="https://3bbdb23jem2j4esrdm1gcdbd-wpengine.netdna-ssl.com/wp-content/uploads/dynamik-gen/theme/images/peru-hop-header-red.jpg" width="100" height="100">
-    </a>
-    <!--svg viewBox="0 0 111 16">
-      <use xlink:href="/public/images/icons.svg#google-analytics-text"></use>
-    </svg-->
+    </a-->
   </div>
 </div>
