--- a/templates/index.html
+++ b/templates/index.html
@@ -6,9 +6,9 @@
 <section>
 
   <p class="u-spaceDouble">
-    <img width="600" alt="Google Analytics Developers Image"
+    <!--img width="600" alt="Google Analytics Developers Image"
       srcset="/public/images/google-analytics-partners-2x.png 2x"
-      src="/public/images/google-analytics-partners.png">
+      src="/public/images/google-analytics-partners.png"-->
   </p>
 
 </section>
